React checkboxes are so fun

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -26,7 +26,7 @@ h2 {
     text-align:right;
 }
 
-input[type=button] {
+input[type=button],input[type=submit]  {
     padding: 6px;
     background-color: #337ab7;
     color: #fff;
