--- a/es6/public/main.css
+++ b/es6/public/main.css
@@ -54,7 +54,7 @@ form {
     clear:both;
 }
 
-input[type=button] {
+input[type=button],input[type=submit]  {
     padding: 6px;
     background-color: #337ab7;
     color: #fff;
@@ -71,10 +71,12 @@ input[type=button] {
     border: 1px solid #999;
     font-size: 16px;
     width: 294px;
-    margin-bottom: 10px;
+
 }
 
 label {
+    display:block;
+    margin-top: 10px;
     font-weight: bold;
 }
 
@@ -143,6 +145,11 @@ label {
 
 .x:hover {
     text-decoration: none;
+}
+
+.error {
+    color: #900;
+    font-size: 12px;
 }
 
 .hidden {
