--- a/react/src/Modal.css
+++ b/react/src/Modal.css
@@ -57,9 +57,15 @@ form {
     border: 1px solid #999;
     font-size: 16px;
     width: 294px;
-    margin-bottom: 10px;
 }
 
 label {
+    display:block;
+    margin-top: 10px;
     font-weight: bold;
+}
+
+.error {
+    color: #900;
+    font-size: 12px;
 }
