--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -6,6 +6,26 @@ h2 {
     font-weight: normal;
 }
 
+input[type=button],input[type=submit]  {
+    padding: 6px;
+    background-color: #337ab7;
+    color: #fff;
+    border: 1px solid #2e6da4;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    width:130px;
+}
+
+.form-input {
+    padding: 6px;
+    border-radius: 4px;
+    border: 1px solid #999;
+    font-size: 16px;
+    width: 294px;
+
+}
+
 .flex {
     display:flex;
 }
@@ -26,13 +46,3 @@ h2 {
     text-align:right;
 }
 
-input[type=button],input[type=submit]  {
-    padding: 6px;
-    background-color: #337ab7;
-    color: #fff;
-    border: 1px solid #2e6da4;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    width:130px;
-}
