--- a/es6/src/main.css
+++ b/es6/src/main.css
@@ -1,9 +1,24 @@
+:root {
+  color-scheme: light dark;
+}
+
 body {
     font-family:sans-serif;
+    color: light-dark(#333, #FFF);
+    background-color: light-dark(#FFF, #333);
 }
 
 h2 {
     font-weight: normal;
+}
+
+#dark-toggle {
+    margin-top:20px;
+    font-size:24px;
+}
+
+#dark-toggle a {
+    cursor: pointer;
 }
 
 /* records table */
@@ -44,7 +59,7 @@ h2 {
 .records td.total {
     padding-top: 10px;
     font-weight:bold;
-    border:1px solid #FFF;
+    border-width:0px;
 }
 
 
@@ -115,7 +130,7 @@ label {
 }
 
 .modal-body {
-    background-color: #fefefe;
+    background-color: light-dark(#FFF, #333);
     margin: 150px auto;
     padding: 20px;
     border: 1px solid #888;
@@ -133,8 +148,9 @@ label {
 }
 
 .x {
-    color: #05b;
-    border: 1px solid #05b;
+
+    color: light-dark(#05b, #0af);
+    border: 1px solid light-dark(#05b, #0af);
     padding: 2px 6px;
     cursor: pointer;
     float: right;
