--- a/vue/src/main.css
+++ b/vue/src/main.css
@@ -1,9 +1,24 @@
+:root {
+  color-scheme: light dark;
+}
+
 body {
     font-family:sans-serif;
+    color: light-dark(#333, #FFF);
+    background-color: light-dark(#FFF, #333);
 }
 
 h2 {
     font-weight: normal;
+}
+
+#dark-toggle {
+    margin-top:20px;
+    font-size:24px;
+}
+
+#dark-toggle a {
+    cursor: pointer;
 }
 
 input[type=button],input[type=submit]  {
