--- a/htmx/src/main.css
+++ b/htmx/src/main.css
@@ -163,8 +163,8 @@ label {
 }
 
 .error {
-    color: #900;
-    font-size: 12px;
+    color: light-dark(#900, #F33);
+    font-size: 13px;
 }
 
 .hidden {
