--- a/htmx/src/main.css
+++ b/htmx/src/main.css
@@ -21,7 +21,6 @@ h2 {
     cursor: pointer;
 }
 
-
 /* records table */
 
 .records { 
@@ -70,7 +69,7 @@ form {
     clear:both;
 }
 
-input[type=button] {
+input[type=button],input[type=submit]  {
     padding: 6px;
     background-color: #337ab7;
     color: #fff;
@@ -87,6 +86,7 @@ input[type=button] {
     border: 1px solid #999;
     font-size: 16px;
     width: 294px;
+
 }
 
 label {
